--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,9 +4,12 @@ services:
   # 1. Laravel App (PHP-FPM)
   app:
     build:
+      #url build file ( . is default start at src)
       context: .
+      # link DockerFile in src
       dockerfile: docker/Dockerfile
     container_name: laravel_app
+    # mount src to /var/www in VM with permission read write
     volumes:
       - .:/var/www:rw
     networks:
@@ -22,6 +25,7 @@ services:
     restart: always
     volumes:
       - pgdata:/var/lib/postgresql/data
+    #set env condition for postgreSQL it will change in production
     environment:
       POSTGRES_DB: laravel
       POSTGRES_USER: laravel
@@ -33,8 +37,10 @@ services:
   pgadmin:
     image: dpage/pgadmin4
     container_name: pgadmin
+    #set port 5050 for call from browser to mapping port 80 in VM
     ports:
       - "5050:80"
+    #set env condition for postgreSQL WebUI it will change in production
     environment:
       PGADMIN_DEFAULT_EMAIL: admin@admin.com
       PGADMIN_DEFAULT_PASSWORD: admin
